compiler/e2e/test/snapshot/bootstrap/module_tree/redfinition/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: a module with the given name already exists
  ╭─ bootstrap/module_tree/redfinition/main.pnx:2:8
  │
1 │ public module submodule
  │        ---------------- existing module with the same name
2 │ public module submodule:
  │        ^^^^^^^^^^^^^^^^ this module redefines an existing module
  │
  = can not have more than one module with the same name in the same scope



stdout:
